<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp">

    <TextView
        android:id="@+id/txtView_solo_image_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imgView_solo_image"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center|fill"
        android:layout_weight="2"
        android:contentDescription="@string/solo_default_image_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_solo_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_style"
                android:text="@string/solo_back_btn"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_solo_set_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_style"
                android:padding="10dp"
                android:text="@string/solo_set_phone_background_btn"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_solo_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_style"
                android:text="@string/solo_previous_btn"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_solo_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_style"
                android:text="@string/solo_next_btn"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_solo_add_to_album"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:padding="10dp"
                android:text="@string/solo_add_to_album_btn"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_solo_delete_from_album"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:padding="10dp"
                android:text="@string/solo_delete_from_album_btn"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
